[package]
name = "pixelpagecount"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rusqlite = { version = "0.37", features = ["bundled"] }
time = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
